Updated html with browser icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" type="image/png" href="http://moziru.com/images/headphones-clipart-transparent-background-10.png" sizes="16x16">
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src = "quiz.js"></script>
     <title>Music Madness</title>
